[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chexbert"
version = "0.1.0"
description = "A fork of the original CheXBert repository, patched for pip installation."
authors = [{name = "Nina Montana Brown", email = "nina.brown.15@ucl.ac.uk"}]
license = {text = "NA"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NMontanaBrown/CheXbert"
"Bug Tracker" = "https://github.com/NMontanaBrown/CheXbert/issues"

[tool.setuptools]
packages = ["chexbert"]
